--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,9 @@
     "@testing-library/user-event": "^12.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-geocode": "^0.2.2",
+    "react-google-autocomplete": "^1.2.6",
+    "react-google-maps": "^9.4.5",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
