--- a/tcf/client/package.json
+++ b/tcf/client/package.json
@@ -6,11 +6,11 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
-    "auth0": "^2.30.0",
-    "axios": "^0.21.0",
-    "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-geocode": "^0.2.2",
+    "react-google-autocomplete": "^1.2.6",
+    "react-google-maps": "^9.4.5",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
