--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-google-autocomplete": "^1.2.6",
     "react-google-map": "^3.1.1",
     "react-google-maps": "^9.4.5",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
