added package.json files

--- a/package.json
+++ b/package.json
@@ -20,14 +20,20 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "cli": "^1.0.1",
+    "axios": "^0.18.1",
     "bootstrap": "^4.5.3",
-    "express": "^4.16.3",
+    "cli": "^1.0.1",
+    "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "mongoose": "^5.3.16",
+    "mongoose": "^5.11.7",
     "mysql2": "^2.2.5",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-geocode": "^0.2.2",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.2.0",
-    "sequelize": "^6.3.5"
+    "react-scripts": "^4.0.1",
+    "sequelize": "^6.3.5",
+    "start": "^5.1.0"
   }
 }
