--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.2.0",
     "axios": "^0.18.0",
-    "cli": "^1.0.1",
     "bootstrap": "^4.5.3",
+    "cli": "^1.0.1",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
