--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
     "react-google-autocomplete": "^1.2.6",
     "react-google-map": "^3.1.1",
     "react-google-maps": "^9.4.5",
+    "react-google-places-autocomplete": "^3.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-share": "^4.3.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
