--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^5.3.16",
     "mysql2": "^2.2.5",
     "npm": "^6.14.9",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.2.0",
     "sequelize": "^6.3.5"
   }
