--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^1.2.0",
     "axios": "^0.18.0",
+    "babel": "^6.23.0",
     "bootstrap": "^4.5.3",
     "cli": "^1.0.1",
     "express": "^4.16.3",
