--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "client": "cd client && npm run start",
     "seed": "node scripts/seedDB.js",
     "install": "cd client && npm install",
-    "build": "npm run build",
-    "heroku-postbuild": "npm run build"
+    "build": "npm run build"
   },
   "author": "",
   "license": "ISC",
