--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node server.js",
     "heroku-postbuild": "cd client && npm install && npm build",
     "client": "cd client && npm start",
     "server": "nodemon app.js",
